Archive2/76/84e608271e73a1/output
main.cpp: In instantiation of 'void A<T>::onlyForInts(T) [with T = float]':
main.cpp:20:21:   required from here
main.cpp:10:9: error: static assertion failed: This should work only with ints!
         static_assert(std::is_same<T, int>::value, "This should work only with ints!");
         ^
